added JPA Specifications and did Intellij code refactoring